--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script>
   /* bg: 2095 x 1360 */
   /* ruleta: 654 x 654 */
+  var it = 123;
   var viewWidth = 1047;
   var viewHeight = 680;
 
@@ -113,6 +114,6 @@
   }*/
 
   </script>
-
+  <!-- CODIGO para mostrar git-->
   </body>
 </html>
